[package]
name = "dreamhack_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87", features = ["backtrace"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.28.1"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "tokio-macros"] }
tokio-macros = "2.4.0"
