[package]
name = "creamhack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87", features = ["backtrace"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
dialoguer = "0.11.0"
keyring = {version = "3.2.1", features = ["sync-secret-service"]}
log = "0.4.22"
log4rs = "1.3.0"
ratatui = "0.28.1"
reqwest = { version = "0.12.7", features = ["json", "blocking", "cookies"] }
rpassword = "7.3.1"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "tokio-macros"] }
tokio-macros = "2.4.0"
tui-tree-widget = "0.22.0"

[target.x86_64-unknown-linux-gnu.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["linux-native"]

[target.x86_64_apple_darwin.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["apple-native"]

[target.x86_64-pc-windows-msvc.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["windows-native"]
