[package]
name = "creamhack"
version = "0.1.0"
authors = ["hyunbin0550 <hyunbin0550@proton.me>"]
homepage = "https://github.com/KimWang906/creamhack"
description = "Dreamhack TUI client"
repository = "https://github.com/KimWang906/creamhack"
license-file = "LICENSE"
edition = "2021"

[dependencies]
# Core
anyhow = { version = "1.0.87", features = ["backtrace"] }
reqwest = { version = "0.12.7", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "tokio-macros"] }
tokio-macros = "2.4.0"
# Utils
zip = "2.2.0"
# Ui
ratatui = "0.28.1"
tui-tree-widget = "0.22.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
# Logger
log4rs = "1.3.0"
log = "0.4.22"
# Auth
dialoguer = "0.11.0"
rpassword = "7.3.1"
keyring = { version = "3.2.1", default-features = false }
# Config
dirs = "5.0.1"
toml_edit = "0.22.21"
toml = "0.8.19"
# Build
whoami = "1.5.2"


[target.x86_64-unknown-linux-gnu.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["linux-native"]

[target.x86_64_apple_darwin.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["apple-native"]

[target.x86_64-pc-windows-msvc.dependencies.keyring]
version = "3.2.1"
default-features = false
features = ["windows-native"]

